[gd_scene load_steps=10 format=3 uid="uid://bphdjb6rtr8e7"]

[ext_resource type="Script" path="res://Scripts/AdvancedItem.gd" id="1_7wbc1"]
[ext_resource type="Script" path="res://Scripts/CollectIcon.gd" id="3_8doae"]
[ext_resource type="Texture2D" uid="uid://b7vl6pmbub6aj" path="res://Images/glint.png" id="3_jeqgo"]
[ext_resource type="Texture2D" uid="uid://b0xglkyaqfywy" path="res://Images/collect.png" id="4_24utu"]
[ext_resource type="Texture2D" uid="uid://djnivexvj3aci" path="res://Images/inspecticon.png" id="5_c66pq"]
[ext_resource type="Script" path="res://Scripts/InspectIcon.gd" id="5_oea2j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d4l56"]
radius = 140.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l4pbu"]
radius = 130.096

[sub_resource type="CircleShape2D" id="CircleShape2D_0reaq"]
radius = 25.02

[node name="AdvancedItem" type="Area2D"]
script = ExtResource("1_7wbc1")
item_name = null
item_description = "."
item_type = null
can_inspect = null
can_collect = true
dialogue_json_path = null

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(0, 1)

[node name="GlintSprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(1, 0)
scale = Vector2(0.0684524, 0.0684524)
texture = ExtResource("3_jeqgo")

[node name="InspectIcon" type="Area2D" parent="."]
position = Vector2(0, -37.695)
scale = Vector2(0.2, 0.2)
script = ExtResource("5_oea2j")

[node name="Sprite2D" type="Sprite2D" parent="InspectIcon"]
position = Vector2(0, -36.525)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_c66pq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InspectIcon"]
position = Vector2(0, -31.525)
shape = SubResource("CircleShape2D_d4l56")

[node name="CollectIcon" type="Area2D" parent="."]
position = Vector2(38.295, 0)
scale = Vector2(0.2, 0.2)
script = ExtResource("3_8doae")

[node name="Sprite2D" type="Sprite2D" parent="CollectIcon"]
position = Vector2(38.525, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_24utu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectIcon"]
position = Vector2(33.525, 0)
shape = SubResource("CircleShape2D_l4pbu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0reaq")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="input_event" from="InspectIcon" to="." method="_on_inspect_icon_input_event"]
[connection signal="input_event" from="CollectIcon" to="." method="_on_collect_icon_input_event"]
